[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-monitor"
version = "0.1.0"
description = "Terminal UI for monitoring Claude plan usage limits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

[project.scripts]
claude-usage-monitor = "claude_usage_monitor:entry_point"
